--- a/index.html
+++ b/index.html
@@ -152,16 +152,20 @@
     </div>
     <div class="gallery">
         <div class="galleryItem " >
+        <div class="galleryItem">
             <h1 class="galleryTitle">Be Yourself!</h1>
-            <video autoplay loop muted   width="360" height="740" src="video1.mp4"></video>
-                
+            <img src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="galleryImg">
         </div>
-       
-
-        <div class="galleryItem ">
+        <div class="galleryItem">
+            <img src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="galleryImg">
+            <h1 class="galleryTitle">This is the First Day of Your New Life</h1>
+        </div>
+        <div class="galleryItem">
             <h1 class="galleryTitle">Just Do it!</h1>
-            <video autoplay loop muted   width="360" height="740" src="video2.mp4"></video>
-        </div>
+            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                alt="" class="galleryImg">
     </div>
 
     <div class="newSeason">
